--- a/src/template.html
+++ b/src/template.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Etiqueta h1</h1>
     <h2>Aqui etiqueta h2222</h2>
+    <h2>Aqui etiqueta h2222</h2>
+    <h2>Aqui etiqueta h2222</h2>
+    <h2>Aqui etiqueta h2222</h2>
 </body>
 </html>
